--- a/RestaurantProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RestaurantProjectMVC/Views/Shared/_Layout.cshtml
@@ -9,15 +9,15 @@
 </head>
 <body>
     
-<nav class="navbar is-transparent" role="navigation" aria-label="dropdown navigation">
+<nav class="navbar is-dark" role="navigation" aria-label="dropdown navigation">
     <div class="navbar-item">
         <a class="navbar-item"  href="@Url.Action("Index", "Restaurants")">
             Home
         </a>
-        <a class="navbar-item" href="./AboutUs.html">
+        <a class="navbar-item" href="#">
             About
         </a>
-        <a class="navbar-item" href="./ContactUs.html">
+        <a class="navbar-item" href="#">
             Contact
         </a>
     </div>
