--- a/RestaurantProjectMVC/Views/Restaurants/Index.cshtml
+++ b/RestaurantProjectMVC/Views/Restaurants/Index.cshtml
@@ -2,6 +2,12 @@
 
 @{
     ViewBag.Title = "Index";
+    var selectList = new SelectList(
+        new List<SelectListItem>
+        {
+            new SelectListItem {Text = "Top Three", Value = "three"},
+            new SelectListItem {Text = "Order By Name", Value = "name"}
+        }, "Value", "Text");
 }
 
 
@@ -20,24 +26,31 @@
             </div>
             </section>
         </div>
-    </div>
+    </div>  
+<div class="container">
     
-
-
-    
-<div class="container is-fluid">
-    
+   
     <div class="columns">
+        @using (Html.BeginForm("Index", "Restaurants", FormMethod.Get))
+    {
         <div class="column">
-            @using (Html.BeginForm("Index", "Restaurants", FormMethod.Get))
-            {
-                @Html.TextBox("searchString")<input type="submit" value="Search"/>
-            }
-        </div>
+            <div class="field has-addons">
+                @Html.TextBox("searchString", null, new { @style = " input ", @placeholder = "search...." })
+                <div class="select">
+                    @Html.DropDownList("searchCriteria", selectList, "Search Options")
+                </div>
+                    <div class="control">
+                        <input class="button is-info" type="submit" value="Search" />
+                    </div>
+                </div>
+
+
+            </div>
+}
         <div class="column">
             <a class="button is-primary" href="@Url.Action("Create", "Restaurants")">Create A New Restaurant</a>
         </div>
-    </div>
+    </div> 
     <div class="columns is-multiline">
 
         @foreach (var item in Model)
