completed all functionality and styling

--- a/RestaurantProjectMVC/Views/Restaurants/Details.cshtml
+++ b/RestaurantProjectMVC/Views/Restaurants/Details.cshtml
@@ -61,6 +61,9 @@
 <div class="column">
     <h3 class="title is-3">Reviews</h3>
 </div>
+<div class="column">
+    <a class="button is-primary" href="@Url.Action("Create", "Reviews")">Add a review</a>
+</div>
 <div class="container is-fluid">
     <div class="columns is-multiline">
         
