--- a/RestaurantProjectMVC/Views/Reviews/Create.cshtml
+++ b/RestaurantProjectMVC/Views/Reviews/Create.cshtml
@@ -4,68 +4,83 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<div class="columns">
+    <div class="column">
+        <section class="hero is-medium is-primary is-bold">
+            <div class="hero-body">
+                <div class="container">
+                    <h1 class="title">
+                        Add A New Review
+                    </h1>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Review</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div class="container">
+        <div class="columns is-centered">
+            <div class="column is-5-tablet is-4-desktop is-3-widescreen">
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="field">
+                        @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "input" } })
+                            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReviewMessage, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReviewMessage, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ReviewMessage, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="field">
+                        @Html.LabelFor(model => model.ReviewMessage, htmlAttributes: new { @class = "label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.ReviewMessage, new { htmlAttributes = new { @class = "input" } })
+                            @Html.ValidationMessageFor(model => model.ReviewMessage, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="field">
+                        @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "input" } })
+                            @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.profileURL, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.profileURL, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.profileURL, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="field">
+                        @Html.LabelFor(model => model.profileURL, htmlAttributes: new { @class = "label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.profileURL, new { htmlAttributes = new { @class = "input" } })
+                            @Html.ValidationMessageFor(model => model.profileURL, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RestarantId, "RestarantId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("RestarantId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RestarantId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="field">
+                        @Html.LabelFor(model => model.RestarantId, "RestarantId", htmlAttributes: new { @class = "label" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("RestarantId", null, htmlAttributes: new { @class = "input" })
+                            @Html.ValidationMessageFor(model => model.RestarantId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Create" class="button is-primary" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div class="column">
+        <a class="button is-link" href="@Url.Action("Index", "Restaurants")">Back To All Restaurants</a>
+    </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
