added some client side validation

--- a/RestaurantProjectMVC/Views/Restaurants/Create.cshtml
+++ b/RestaurantProjectMVC/Views/Restaurants/Create.cshtml
@@ -30,7 +30,7 @@
                     <div class="field">
                         @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "label" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "input" } })
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "input", required = "required" } })
                             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                     <div class="field">
                         @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "label"})
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "input" } })
+                            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "input", required = "required" } })
                             @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                     <div class="field">
                         @Html.LabelFor(model => model.ZipCode, htmlAttributes: new { @class = "label" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "input" } })
+                            @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "input", required = "required", pattern = @"^\d{5}(?:[-\s]\d{4})?$" } })
                             @Html.ValidationMessageFor(model => model.ZipCode, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="field">
                         @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "label" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "input" } })
+                            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "input", required = "required", pattern = @"^\(?([0-9]{3})\)?[-.●]?([0-9]{3})[-.●]?([0-9]{4})$" } })
                             @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -62,15 +62,15 @@
                     <div class="field">
                         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "label" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "input" } })
+                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "input", required = "required" } })
                             @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="field">
-                        @Html.LabelFor(model => model.RestaruantImageURL, htmlAttributes: new { @class = "label" })
+                        @Html.LabelFor(model => model.RestaruantImageURL, "Restaurant Image", htmlAttributes: new { @class = "label" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.RestaruantImageURL, new { htmlAttributes = new { @class = "input" } })
+                            @Html.DropDownList("RestaruantImageURL", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.RestaruantImageURL, "", new { @class = "text-danger" })
                         </div>
                     </div>
